Changed Package Name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forkmeongithub",
+  "name": "fork-on-github",
   "version": "1.0.0",
   "description": "A Simple JavaScript Package to add Fork me on Github Ribbon on any Website",
   "main": "index.js",
