Updated Package Keywords

--- a/package.json
+++ b/package.json
@@ -11,27 +11,12 @@
     "url": "git+https://github.com/meinhoonharsh/Fork-on-Github.git"
   },
   "keywords": [
-    "fork",
-    "on",
-    "github",
-    "github",
-    "fork",
-    "ribbon",
-    "ribbon",
-    "github",
-    "github",
-    "corner",
-    "ribbon",
-    "ribbon",
-    "github",
-    "corner",
-    "fork",
-    "me",
-    "on",
-    "github",
-    "fork",
-    "on",
-    "github",
+    "fork-on-github",
+    "github-fork-ribbon",
+    "ribbon-github",
+    "github-corner-ribbon",
+    "ribbon-github-corner",
+    "fork-me-on-github",
     "semikolan"
   ],
   "author": "Harsh Vishwakarma",
